--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "data/grub-theme"]
 	path = data/grub-theme
-	url = https://github.com/system76/pop-grub-theme.git
+	url = https://github.com/rareos/grub-theme.git
